@@ -6,7 +6,7 @@ with Alire.Releases;
 with Alr.Commands;
 with Alr.Files;
 with Alr.OS_Lib;
-with Alr.Platform;
+with Alr.Origins;
 with Alr.Templates;
 
 package body Alr.Checkout is
@@ -38,7 +38,7 @@ package body Alr.Checkout is
 
    procedure Generate_GPR_Builder (Root : Alire.Index.Release) is
       Success : Boolean;
-      Needed  : constant Query.Instance := Query.Resolve (Root.Depends (Platform.Properties),
+      Needed  : constant Query.Instance := Query.Resolve (Root.Depends (Query.Platform_Properties),
                                                           Success,
                                                           Commands.Query_Policy);
    begin
