@@ -1,5 +1,4 @@
 with Alr.Files;
-with Alr.Platform;
 with Alr.Query;
 with Alr.Templates;
 
@@ -19,9 +18,10 @@ package body Alr.Commands.Pin is
       declare
          Index_File : constant String := Files.Locate_Index_File (Project.Name);
          Success    :          Boolean;
-         Deps       : constant Query.Instance := Query.Resolve (Project.Current.Depends (Platform.Properties),
-                                                                Success,
-                                                                Query_Policy);
+         Deps       : constant Query.Instance :=
+                        Query.Resolve (Project.Current.Depends (Query.Platform_Properties),
+                                       Success,
+                                       Query_Policy);
       begin
          if Success then
             Templates.Generate_Prj_Alr (Deps,
