@@ -1,10 +1,0 @@
-with Alire.Properties;
-
-with Alr.OS;
-
-package Alr.Platform is
-
-   Properties : constant Alire.Properties.Vector := OS.Properties;
-   --  Cached constant copy
-
-end Alr.Platform;
